# radicle-mcp

./: .gitignore  README.md  SYNC_README.md  create_test_issue.py  create_test_radicle_issue.py  demo_radicle.py  demo_sync.py  github_radicle_sync.py  pyproject.toml  setup_mcp.py  show_setup.py  sync_cli.py  sync_with_github_mcp.py  test_both_servers.py  test_server.py  test_sync.py
.github/: copilot-instructions.md
src/radicle_mcp/: __init__.py  server.py
